[tool.poetry]
name = "fake-coin-api"
version = "0.1.0"
description = ""
authors = ["AlmirPaulo <ap.freelas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grip = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
